# coderev

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  action.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  coderev-example.yml  publish.yml
docs/: API.md  COMPARISON.md
examples/: README.md  async_parallel.py  basic_review.py  ci_integration.py  cost_estimation.py  custom_rules.py  good_code.py  review_history.py  sample_code.py  sample_rules.yaml
src/coderev/: __init__.py  async_reviewer.py  autofix.py  batch.py  bitbucket.py  cache.py  cli.py  config.py  cost.py  github.py  gitlab.py  history.py  ignore.py  output.py  precommit.py  prompts.py  providers.py  reviewer.py  rules.py  team.py  tui.py
tests/: __init__.py  conftest.py  test_action.py  test_async_reviewer.py  test_autofix.py  test_autofix_ordering.py  test_batch.py  test_bitbucket.py  test_cache.py  test_cache_atomic.py  test_cache_concurrent_scan.py  test_cli.py  test_cli_ignore.py  test_config.py  test_cost.py  test_cost_bedrock_vertex.py  test_github.py  test_gitlab.py  test_history.py  test_history_atomic.py  test_ignore.py  test_ignore_case_insensitive_windows.py  test_ignore_char_classes.py  test_ignore_compiled_cache.py  test_ignore_dir_contents.py  test_ignore_dir_only.py  test_ignore_escaped_metachars.py  test_ignore_escapes.py  test_ignore_gitignore.py  test_ignore_globstar_unbounded.py  test_ignore_parent_reinclude.py  test_ignore_wildcard_no_cross.py  test_inline_suggestions.py  test_integration.py  test_output.py  test_package.py  test_precommit.py  test_providers.py  test_readme_gifs.py  test_reviewer.py  (+5 more)
vscode-extension/: README.md  package.json
vscode-extension/src/: diagnostics.ts  extension.ts  panel.ts  runner.ts
vscode-extension/src/test/suite/: index.ts  runner.test.ts
