[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderev"
version = "0.4.0"
description = "AI-powered code review CLI tool"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Khalil Limem", email = "khalil@example.com" }
]
keywords = ["code-review", "ai", "cli", "developer-tools", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "toml>=0.10.2",
    "gitpython>=3.1.0",
    "pygments>=2.17.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.12.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "openai>=1.12.0",
    "pyyaml>=6.0.0",
]
all = [
    "openai>=1.12.0",
]

[project.scripts]
coderev = "coderev.cli:main"
coderev-precommit = "coderev.precommit:main"

[project.urls]
Homepage = "https://github.com/khalil/coderev"
Documentation = "https://github.com/khalil/coderev#readme"
Repository = "https://github.com/khalil/coderev"
Issues = "https://github.com/khalil/coderev/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coderev"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: mark test as integration test (requires --integration flag and API keys)",
]

[tool.coverage.run]
source = ["src/coderev"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
